tests/snapshots/assets__check_file@unit-comment-in-chain-binary.typ-0.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/comment/in-chain-binary.typ
snapshot_kind: text
---
#{
  let a = (
    1111111111111 // -
      + 2222222222222 /* 0 */ /* 1 */
      + /* 2 */3333333333333
        / 2 /* 3 */ /* 4 */
      /* 5 */
      + 4444444444444
      + 5555555555555
      - 6666666 /* 6 */
      + /* 7 */7777777
      - 9999999
        / /* 8 */10000000 // 9
      + 111111111111
        * 333 /* 10 */
        / 222 /* 11 */
        * 44444
        / 999
        * 1111
        / 44444
        * 1111
        / 44444
        * 1111
        / 44444
      - /* 12 */222222222222 /* 13 */
      + /* 14 */333333333333
      - 444444444444 // 15
      + 555555555555 /* 16 */
  )

  let b = (
    p /* 1 */ /* 2 */
      not in /* 3 */q
  )
}
