tests/snapshots/assets__check_file@unit-comment-in-chain-call.typ-80.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/comment/in-chain-call.typ
snapshot_kind: text
---
#{
  a.b(1)(2).c.d(3)


  a // 1
    .b(1)(2) // 2
    // 3
    /* 4 */
    ./* 5 */c /* 6 */ /* 7 */
    .d(3) // 8


  /* 0 */
  a /* 1 */
    /* 2 */
    .b(1)(2) /* 3 */
    .c // 4
    /* 5 */
    ./* 6 */d(3) // 7
}
