tests/snapshots/assets__check_file@unit-comment-in-closure.typ-0.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/comment/in-closure.typ
snapshot_kind: text
---
#let conf(
  title: none, //comments
  authors: (),
  abstract: [],
  lang: "zh", // language
  doctype: "book", //comments
  doc, // all comments will be kept by typstyle
) = {
  doc
}

#let f() /* 0 */ = /* 1 */ () => /* 2 */ (
  none
)
#let g(
  ..,
) /* 0 */ = /* 1 */ () => /* 2 */ (
  none
)
#let h(
  ..,
) /* 0 */ = /* 1 */ () => /* 2 */ {
  none
}

#let f = /* 0 */ () /* 1 */ => /* 2 */ (
  none
)
#let g = /* 0 */ (
  ..,
) /* 1 */ => /* 2 */ (
  none
)
#let h = /* 0 */ (
  ..,
) /* 1 */ => /* 2 */ {
  none
}
